# hermes-bridge

./: .gitignore  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
examples/: config.example.yaml
examples/templates/: example-upload-file.md
src/hermes_bridge/: cli.py  config.py  doctor.py  errors.py  lifecycle.py  linking.py  remote.py  templates.py  tmux.py  update.py  upload.py
tests/: test_cli.py  test_config.py  test_dispatch.py  test_lifecycle.py  test_linking.py  test_remote.py  test_templates.py  test_tmux.py  test_update.py  test_upload.py
