[metadata]
name = hermes-bridge
version = 0.1.5
description = Config-driven local launcher for remote Hermes Agent sessions.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Hermes Bridge contributors
keywords = hermes, agent, tmux, ssh, launcher
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: System :: Shells
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    PyYAML>=6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hermes-bridge = hermes_bridge.cli:entrypoint
